discussion/kv_engine/184517/184517_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus.

    ./mcstat --json 'threads details'
    {
      "details": {
        "89513": {
        "name": "memcached",
        "system": 110,
        "user": 1070
      },
    [... cut ...]

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-05 21:01:38.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 21:18:45.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22356/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
            sigar::iterate_threads([&json, &pid](auto tid,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:624:13: error: use of undeclared identifier "LOG_WARNING" [clang-diagnostic-error]
            LOG_WARNING("{} - sigar::iterate_process_threads: {}",
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:245:24: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
                sigar::iterate_threads([&kvCollector](auto tid,
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22356/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20:
error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22356/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51687/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/stats.cc(245): error C2039: "iterate_threads": is not a member of "sigar" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51687/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43393/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43393/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1119/ : FAILURE

Compile error at [2023-01-05T21:06:41.271Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:245:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1119/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12077/ : FAILURE

Compile error at [2023-01-05T21:03:31.456Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12077/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24824/ : FAILURE

Compile error at [2023-01-05T21:18:22.828Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24824/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25682/ : FAILURE

Compile error at [2023-01-05T21:07:40.121Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25682/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24400/ : FAILURE

Compile error at [2023-01-05T21:06:49.572Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:245:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24400/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23927/ : FAILURE

Compile error at [2023-01-05T21:11:16.577Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23927/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32819/ : FAILURE

Compile error at [2023-01-05T21:05:57.687Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32819/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12164/ : FAILURE

Compile error at [2023-01-05T21:08:54.661Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/stats.cc:245:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12164/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21984/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
